Button spacing fix

--- a/src/SimpleQuestions.css
+++ b/src/SimpleQuestions.css
@@ -64,9 +64,9 @@
 
 .Simple-option-2 {
     position: absolute;
-    left: 0;
+    left: 1;
     right: 1;
-    padding-left: 55vw;
+    padding-left: 10vw;
 }
 
 .Simple-back-bottom {
